--- a/dettaglio-4.html
+++ b/dettaglio-4.html
@@ -1,1 +1,512 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>⚡ Sailor Jupiter - Makoto Kino</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            font-family: 'Georgia', serif;
+            background: linear-gradient(135deg, #56ab2f 0%, #a8e063 100%);
+            background-attachment: fixed;
+            color: #333;
+            overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        /* Fulmini animati nello sfondo */
+        .lightning {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .bolt {
+            position: absolute;
+            background: linear-gradient(to bottom, #fff, #9acd32, transparent);
+            width: 3px;
+            opacity: 0;
+            animation: strike 5s infinite;
+        }
+
+        @keyframes strike {
+            0% { opacity: 0; height: 0; }
+            10% { opacity: 1; height: 100vh; }
+            15% { opacity: 0; }
+            100% { opacity: 0; }
+        }
+
+        /* Header fisso */
+        .page-header {
+            background: linear-gradient(135deg, #56ab2f 0%, #2d5016 100%);
+            color: white;
+            padding: 1.5rem 0;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            border-bottom: 4px solid #9acd32;
+        }
+
+        .header-content {
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 0 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .back-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            text-decoration: none;
+            color: #ffffff;
+            font-size: 1.1rem;
+            font-weight: bold;
+            padding: 0.8rem 1.5rem;
+            background: rgba(0, 0, 0, 0.3);
+            border-radius: 50px;
+            transition: all 0.3s;
+            border: 2px solid #9acd32;
+        }
+
+        .back-link:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateX(-5px);
+        }
+
+        .page-title {
+            font-size: 2rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            font-family: 'Times New Roman', serif;
+        }
+
+        /* Container principale */
+        .main-container {
+            position: relative;
+            z-index: 1;
+            min-height: calc(100vh - 100px);
+        }
+
+        /* Hero section */
+        .hero-section {
+            background: linear-gradient(to bottom, rgba(255,255,255,0.95), rgba(255,255,255,0.98));
+            padding: 4rem 2rem;
+            text-align: center;
+            border-bottom: 4px solid #9acd32;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+        }
+
+        .character-emoji {
+            font-size: 8rem;
+            margin-bottom: 1rem;
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0) rotate(-5deg); }
+            50% { transform: translateY(-20px) rotate(5deg); }
+        }
+
+        .hero-section h1 {
+            font-family: 'Times New Roman', serif;
+            font-size: 4rem;
+            color: #56ab2f;
+            margin-bottom: 0.5rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .character-subtitle {
+            font-size: 2rem;
+            color: #2d5016;
+            font-style: italic;
+            font-weight: bold;
+        }
+
+        /* Content wrapper */
+        .content-wrapper {
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 3rem 2rem;
+        }
+
+        /* Citazione */
+        .quote-section {
+            background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%);
+            padding: 4rem 2rem;
+            text-align: center;
+            margin: 3rem 0;
+            position: relative;
+            box-shadow: inset 0 0 50px rgba(0,0,0,0.1);
+        }
+
+        .quote-section::before {
+            content: '"';
+            font-size: 10rem;
+            color: #56ab2f;
+            opacity: 0.2;
+            position: absolute;
+            top: -20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-family: 'Times New Roman', serif;
+        }
+
+        .quote-text {
+            font-style: italic;
+            font-size: 2rem;
+            color: #333;
+            max-width: 900px;
+            margin: 0 auto;
+            position: relative;
+            z-index: 1;
+        }
+
+        /* Sezioni contenuto */
+        .content-section {
+            background: rgba(255, 255, 255, 0.95);
+            padding: 4rem 2rem;
+            margin: 3rem 0;
+            border-radius: 0;
+            box-shadow: 0 5px 25px rgba(0,0,0,0.2);
+        }
+
+        .content-section:nth-child(even) {
+            background: rgba(245, 245, 245, 0.95);
+        }
+
+        .section-inner {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .content-section h2 {
+            color: #56ab2f;
+            font-size: 3rem;
+            margin-bottom: 2rem;
+            font-family: 'Times New Roman', serif;
+            text-align: center;
+            position: relative;
+            padding-bottom: 1.5rem;
+        }
+
+        .content-section h2::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 150px;
+            height: 4px;
+            background: linear-gradient(to right, #56ab2f, #9acd32);
+        }
+
+        .content-section p {
+            font-size: 1.3rem;
+            line-height: 2;
+            color: #444;
+            margin-bottom: 1.5rem;
+            text-align: justify;
+        }
+
+        /* Info boxes */
+        .info-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin: 3rem 0;
+        }
+
+        .info-box {
+            background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%);
+            padding: 2rem;
+            border-radius: 15px;
+            border: 3px solid #56ab2f;
+            transition: all 0.3s;
+        }
+
+        .info-box:hover {
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 0 15px 40px rgba(86, 171, 47, 0.4);
+        }
+
+        .info-box h3 {
+            color: #56ab2f;
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        .info-box p {
+            font-size: 1.1rem;
+            line-height: 1.7;
+            margin: 0;
+            text-align: left;
+        }
+
+        /* Timeline section */
+        .timeline-section {
+            background: linear-gradient(135deg, #56ab2f 0%, #2d5016 100%);
+            padding: 4rem 2rem;
+            margin: 3rem 0;
+        }
+
+        .timeline-inner {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .timeline-section h3 {
+            color: white;
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+            text-align: center;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        }
+
+        .timeline-section ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .timeline-section li {
+            color: white;
+            padding: 1.2rem 0;
+            padding-left: 3rem;
+            position: relative;
+            font-size: 1.3rem;
+            line-height: 1.8;
+            border-left: 3px solid #9acd32;
+            margin-left: 2rem;
+        }
+
+        .timeline-section li::before {
+            content: '⚡';
+            position: absolute;
+            left: -1.5rem;
+            font-size: 1.5rem;
+            background: rgba(255,255,255,0.2);
+            padding: 0.5rem;
+            border-radius: 50%;
+        }
+
+        /* Simboli decorativi */
+        .decorative-symbols {
+            text-align: center;
+            font-size: 4rem;
+            padding: 3rem 0;
+            opacity: 0.8;
+        }
+
+        /* Footer */
+        footer {
+            background: linear-gradient(135deg, #56ab2f 0%, #2d5016 100%);
+            color: white;
+            text-align: center;
+            padding: 3rem 2rem;
+            margin-top: 0;
+            border-top: 4px solid #9acd32;
+        }
+
+        footer p {
+            font-size: 1.2rem;
+            margin: 0.5rem 0;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .hero-section h1 { font-size: 2.5rem; }
+            .character-emoji { font-size: 5rem; }
+            .character-subtitle { font-size: 1.3rem; }
+            .content-section h2 { font-size: 2rem; }
+            .content-section p { font-size: 1.1rem; text-align: left; }
+            .quote-text { font-size: 1.3rem; }
+            .page-title { font-size: 1.3rem; }
+            .info-grid { grid-template-columns: 1fr; }
+        }
+    </style>
+</head>
+<body>
+    <!-- Fulmini animati -->
+    <div class="lightning" id="lightning"></div>
+
+    <!-- Header fisso -->
+    <header class="page-header">
+        <div class="header-content">
+            <a href="index.html" class="back-link">
+                <span>← Torna a Sailor Moon</span>
+            </a>
+            <div class="page-title">⚡ Sailor Jupiter</div>
+        </div>
+    </header>
+
+    <!-- Container principale -->
+    <div class="main-container">
+        
+        <!-- Hero section -->
+        <section class="hero-section">
+            <div class="character-emoji">⚡</div>
+            <h1>Sailor Jupiter</h1>
+            <p class="character-subtitle">Makoto Kino - La Guerriera del Tuono e del Coraggio</p>
+        </section>
+
+        <!-- Citazione -->
+        <section class="quote-section">
+            <p class="quote-text">Proteggerò chi amo con tutta la mia forza!</p>
+        </section>
+
+        <!-- Storia -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>La Storia di Makoto</h2>
+                <p>
+                    Makoto Kino è una ragazza alta e atletica che ha vissuto momenti difficili: i suoi genitori 
+                    sono morti in un incidente aereo quando era piccola, lasciandola orfana e costringendola a 
+                    cavarsela da sola. Questa esperienza l'ha resa incredibilmente forte e indipendente, ma sotto 
+                    la sua apparenza da "ragazza dura" si nasconde un cuore dolce e un animo gentile.
+                </p>
+                <p>
+                    A scuola ha la reputazione di essere una "teppista" a causa della sua altezza e della sua forza 
+                    fisica - si dice che sia stata espulsa dalla scuola precedente per aver picchiato dei bulli. 
+                    Ma la verità è che Makoto è una romantica sognante che ama cucinare, fare giardinaggio e 
+                    prendersi cura degli altri. Il suo sogno è diventare una sposa felice e gestire un negozio 
+                    di fiori.
+                </p>
+                <p>
+                    Quando Luna la scopre e le rivela che è Sailor Jupiter, Makoto abbraccia il suo destino con 
+                    entusiasmo. Con il grido "Jupiter Power, Make Up!" si trasforma nella guerriera del tuono e 
+                    dei fulmini, la più forte fisicamente tra tutte le Sailor Senshi. I suoi attacchi elettrici 
+                    sono devastanti e la sua forza bruta è ineguagliabile, ma è la sua lealtà e il suo coraggio 
+                    che la rendono veramente speciale.
+                </p>
+            </div>
+        </section>
+
+        <div class="decorative-symbols">⚡ 🌸 💪</div>
+
+        <!-- Caratteristiche -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>Le Qualità di Sailor Jupiter</h2>
+                <div class="info-grid">
+                    <div class="info-box">
+                        <h3>⚡ Potere del Fulmine</h3>
+                        <p>Controlla elettricità e tuoni. I suoi attacchi elettrici sono i più devastanti tra le Senshi Inner.</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>💪 Forza Sovrumana</h3>
+                        <p>È la più forte fisicamente del gruppo. Può sollevare pesi incredibili e combattere corpo a corpo.</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>🌸 Cuore Gentile</h3>
+                        <p>Nonostante l'apparenza da "ragazza dura", è dolce e premurosa. Ama cucinare per gli amici.</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>🛡️ Protettrice Nata</h3>
+                        <p>Metterebbe la sua vita in pericolo per proteggere chi ama. Il suo coraggio è leggendario.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Timeline -->
+        <section class="timeline-section">
+            <div class="timeline-inner">
+                <h3>I Momenti Chiave della sua Vita</h3>
+                <ul>
+                    <li>Perde i suoi genitori in un incidente aereo da bambina</li>
+                    <li>Impara a vivere da sola e a cavarsela in ogni situazione</li>
+                    <li>Trasferisce scuola e incontra Usagi, che diventa la sua migliore amica</li>
+                    <li>Luna la scopre e le rivela che è Sailor Jupiter</li>
+                    <li>Si unisce alle Sailor Senshi portando forza e coraggio al team</li>
+                    <li>Sviluppa attacchi potentissimi come "Supreme Thunder"</li>
+                    <li>Diventa Super Sailor Jupiter con poteri elettrici amplificati</li>
+                    <li>Realizza il sogno di aprire un negozio di fiori e pasticceria</li>
+                </ul>
+            </div>
+        </section>
+
+        <div class="decorative-symbols">⚡ 💚 ⭐</div>
+
+        <!-- Poteri -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>Poteri e Attacchi Speciali</h2>
+                <p>
+                    Sailor Jupiter è la guerriera del tuono e dei fulmini. Il suo attacco più iconico, "Supreme Thunder", 
+                    evoca un fulmine devastante dalle nuvole che incenerisce i nemici. Per eseguirlo, estende 
+                    un'antenna dalla sua tiara che attira l'elettricità dal cielo, trasformandola in una potente 
+                    scarica elettrica che può paralizzare o distruggere qualsiasi avversario.
+                </p>
+                <p>
+                    Oltre ai poteri elettrici, Makoto possiede anche abilità legate alla natura e alle piante. 
+                    Il suo attacco "Flower Hurricane" crea un tornado di foglie di rosa che confonde i nemici e 
+                    li mette fuori combattimento. La combinazione di forza bruta, poteri elettrici e affinità con 
+                    la natura la rende una combattente estremamente versatile.
+                </p>
+                <p>
+                    Come Super Sailor Jupiter, i suoi poteri raggiungono livelli incredibili. Il suo attacco 
+                    "Jupiter Oak Evolution" evoca il potere sacro della quercia, simbolo di forza e longevità, 
+                    scatenando un'energia naturale purificatrice. La sua evoluzione riflette la sua crescita 
+                    personale: non più solo forza fisica, ma anche saggezza e connessione profonda con la natura.
+                </p>
+            </div>
+        </section>
+
+        <!-- Messaggio finale -->
+        <section class="content-section">
+            <div class="section-inner">
+                <h2>Una Guerriera di Coraggio</h2>
+                <p>
+                    Makoto ci insegna che la vera forza non è solo quella fisica, ma quella del cuore. La sua 
+                    storia ci mostra che si può essere forti e vulnerabili allo stesso tempo, coraggiosi e 
+                    romantici, protettori e sognatori. Non dobbiamo scegliere tra essere duri o dolci - possiamo 
+                    essere entrambe le cose.
+                </p>
+                <p>
+                    Come Sailor Jupiter protegge i suoi amici con coraggio incrollabile, così voglio affrontare 
+                    le difficoltà della vita senza mai perdere la speranza. Il tuono romba forte prima della 
+                    pioggia che nutre la terra - Makoto ci ricorda che anche nei momenti più tempestosi, c'è 
+                    sempre la promessa di una nuova crescita.
+                </p>
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>⚡ Sailor Jupiter - La Guerriera del Tuono e del Coraggio 💚</p>
+        <p style="margin-top: 0.5rem; font-size: 1rem;">La forza viene dal cuore! ⚡</p>
+    </footer>
+
+    <script>
+        // Crea fulmini animati
+        function createLightning() {
+            const lightningContainer = document.getElementById('lightning');
+            for (let i = 0; i < 10; i++) {
+                const bolt = document.createElement('div');
+                bolt.className = 'bolt';
+                bolt.style.left = Math.random() * 100 + '%';
+                bolt.style.animationDelay = Math.random() * 5 + 's';
+                bolt.style.animationDuration = '5s';
+                lightningContainer.appendChild(bolt);
+            }
+        }
+
+        // Inizializza
+        createLightning();
+    </script>
+</body>
+</html>
